--- a/rules/scholar.yaml
+++ b/rules/scholar.yaml
@@ -1,67 +1,67 @@
 # need to use school rules to do this
 payload:
-  - DOMAIN-SUFFIX, sciencedirect.com
-  - DOMAIN-SUFFIX, springer.com
-  - DOMAIN-SUFFIX, scopus.com
-  - DOMAIN-SUFFIX, elsevier.com
-  - DOMAIN-SUFFIX, journals.sagepub.com
-  #- DOMAIN-SUFFIX, ieee.org,Scholar
-  - DOMAIN-SUFFIX, cnki.net,Scholar
-  - DOMAIN-SUFFIX, emerald.com
-  - DOMAIN-SUFFIX, theiet.org
-  - DOMAIN-SUFFIX, wanfangdata.com.cn
-  - DOMAIN-SUFFIX, oup.com
-  - DOMAIN-SUFFIX, iop.org
-  - DOMAIN-SUFFIX, spiedigitallibrary.org
-  - DOMAIN-SUFFIX, jstor.org
-  - DOMAIN, dl.acm.org
-  - DOMAIN, ieeexplore.ieee.org
-  - DOMAIN-SUFFIX, ams.org
-  - DOMAIN, academic.oup.com
-  - DOMAIN, journals.acm.org
-  - DOMAIN, journals.aps.org
-  - DOMAIN-SUFFIX, annualreviews.org
-  - DOMAIN, pubs.acs.org
-  - DOMAIN, journal.chestnet.org
-  - DOMAIN, journals.ametsoc.org
-  - DOMAIN-SUFFIX, onlinelibrary.wiley.com
-  - DOMAIN, pubs.aic.ca
-  - DOMAIN, acpjournals.org
-  - DOMAIN, meridian.allenpress.com
-  - DOMAIN, elibrary.asabe.org
-  - DOMAIN, pubs.nutrition.org
-  - DOMAIN-SUFFIX, ajnr.org
-  - DOMAIN-SUFFIX, ajtmh.org
-  - DOMAIN-SUFFIX, degruyter.com
-  - DOMAIN-SUFFIX, biomedcentral.com
-  - DOMAIN, www.cambridge.org
-  - DOMAIN-SUFFIX, sslibrary.com
-  - DOMAIN-SUFFIX, clinicaltrials.gov 
-  - DOMAIN-SUFFIX, cnpereading.com 
-  - DOMAIN, pubs.cif-ifc.org
-  - DOMAIN-SUFFIX, taylorfrancis.com
-  - DOMAIN-SUFFIX, cadal.edu.cn
-  - DOMAIN, www.publish.csiro.au
-  - DOMAIN, cshprotocols.cshlp.org
-  - DOMAIN, www.cshlpress.com
-  - DOMAIN-SUFFIX, caixin.com
-  - DOMAIN, go.drugbank.com 
-  - DOMAIN-SUFFIX, ems-ph.org
-  - DOMAIN-SUFFIX, engineeringvillage.com
-  - DOMAIN-SUFFIX, apabi.com
-  - DOMAIN-SUFFIX, nssd.cn
-  - DOMAIN-SUFFIX, hytung.cn
-  - DOMAIN, book.sciencereading.cn
-  - DOMAIN, search.ebscohost.com
-  - DOMAIN-SUFFIX, pishu.cn
-  - DOMAIN-SUFFIX, rdfybk.com
-  - DOMAIN-SUFFIX, cqvip.com
-  - DOMAIN-SUFFIX, wanfangdata.com.cn
-  - DOMAIN-SUFFIX, siam.org
-  - DOMAIN-SUFFIX, soshoo.com
-  - DOMAIN, dpaper.las.ac.cn
-  - DOMAIN, sciencechina.cn
-  - DOMAIN-SUFFIX, spiedigitallibrary.org
-  - DOMAIN-SUFFIX, royalsociety.org
-  - DOMAIN-SUFFIX, projecteuclid.org
-  - DOMAIN-SUFFIX, pnas.org
+  - '+.sciencedirect.com'
+  - '+.springer.com'
+  - '+.scopus.com'
+  - '+.elsevier.com'
+  - '+.journals.sagepub.com'
+  #- '+.ieee.org'
+  - '+.cnki.net'
+  - '+.emerald.com'
+  - '+.theiet.org'
+  - '+.wanfangdata.com.cn'
+  - '+.oup.com'
+  - '+.iop.org'
+  - '+.spiedigitallibrary.org'
+  - '+.jstor.org'
+  - 'dl.acm.org'
+  - 'ieeexplore.ieee.org'
+  - '+.ams.org'
+  - 'academic.oup.com'
+  - 'journals.acm.org'
+  - 'journals.aps.org'
+  - '+.annualreviews.org'
+  - 'pubs.acs.org'
+  - 'journal.chestnet.org'
+  - 'journals.ametsoc.org'
+  - '+.onlinelibrary.wiley.com'
+  - 'pubs.aic.ca'
+  - 'acpjournals.org'
+  - 'meridian.allenpress.com'
+  - 'elibrary.asabe.org'
+  - 'pubs.nutrition.org'
+  - '+.ajnr.org'
+  - '+.ajtmh.org'
+  - '+.degruyter.com'
+  - '+.biomedcentral.com'
+  - 'www.cambridge.org'
+  - '+.sslibrary.com'
+  - '+.clinicaltrials.gov'
+  - '+.cnpereading.com'
+  - 'pubs.cif-ifc.org'
+  - '+.taylorfrancis.com'
+  - '+.cadal.edu.cn'
+  - 'www.publish.csiro.au'
+  - 'cshprotocols.cshlp.org'
+  - 'www.cshlpress.com'
+  - '+.caixin.com'
+  - 'go.drugbank.com'
+  - '+.ems-ph.org'
+  - '+.engineeringvillage.com'
+  - '+.apabi.com'
+  - '+.nssd.cn'
+  - '+.hytung.cn'
+  - 'book.sciencereading.cn'
+  - 'search.ebscohost.com'
+  - '+.pishu.cn'
+  - '+.rdfybk.com'
+  - '+.cqvip.com'
+  - '+.wanfangdata.com.cn'
+  - '+.siam.org'
+  - '+.soshoo.com'
+  - 'dpaper.las.ac.cn'
+  - 'sciencechina.cn'
+  - '+.spiedigitallibrary.org'
+  - '+.royalsociety.org'
+  - '+.projecteuclid.org'
+  - '+.pnas.org'
